@@ -14,7 +14,13 @@ import sys, os, re
 # Zope
 from OFS import SimpleItem
 from AccessControl import ClassSecurityInfo
-from Globals import InitializeClass
+
+try:
+    # >= Zope 2.12
+    from App.class_init import InitializeClass
+except ImportError:
+    # < Zope 2.12
+    from Globals import InitializeClass
 
 # Product
 import IssueTracker
